--- a/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
+++ b/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
@@ -27,9 +27,14 @@
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabel2" min="-2" pref="156" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel2" min="-2" pref="156" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="cantFichas" min="-2" pref="134" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="girarRuleta" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -46,9 +51,13 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="cantFichas" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="girarRuleta" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
@@ -89,6 +98,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="girarRuletaActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="cantFichas">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="#Fichas"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
