--- a/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
+++ b/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
@@ -101,7 +101,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="cantFichas">
       <Properties>
-        <Property name="text" type="java.lang.String" value="#Fichas"/>
+        <Property name="text" type="java.lang.String" value="#Fichas: 8"/>
       </Properties>
     </Component>
   </SubComponents>
