Incluyendo polimorfismo para distintos tipos de casilla (clases casilla según el tipo) y sobreescritura de metodo calcularGanancias según el caso

--- a/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
+++ b/Juego_Ruleta/src/juego_ruleta/VentanaRuleta.form
@@ -101,7 +101,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="cantFichas">
       <Properties>
-        <Property name="text" type="java.lang.String" value="#Fichas: 8"/>
+        <Property name="text" type="java.lang.String" value="Fichas: 15"/>
       </Properties>
     </Component>
   </SubComponents>
